feat(bigtable): add conditional writes and SQL insert-if-absent
WHAT
Add immutable conditional requests, filters, ordered mutations and result types,
a result-discarding sink, bounded async helpers, and the insert-if-absent SQL mode.
Record conditional outcomes before applying the empty-branch policy and preserve
the actual request and resolved destination through completion.

WHY
Applications need an atomic destination-side condition and mutation instead of
a read followed by a write. Share the existing single-row runtime while retaining
explicit at-least-once, timestamp, routing and replay boundaries.

Closes #1179